--- a/LivrariaOnlineAPI.csproj
+++ b/LivrariaOnlineAPI.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Comunicacao\Response\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
